--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -28,12 +28,15 @@ footer {
 .dice-utf8 .dice-6::after { content: "\2685"; }
 
 .dice-utf8 {
-    font-size: 32px;
+    font-size: 64px;
+    margin: 0;
+    padding: none;
 }
 
 .dice-utf8 i {
     font-style: normal; /* prevent italic */
 }
+
 
 /**
  * CSS sprite for a dice with six faces. Not used now
@@ -41,9 +44,10 @@ footer {
 .dice-sprite {
     display: inline-block;
     padding: 0;
-    margin: 0 4px 0 0;
+    margin: 0 0 0 0;
     width: 32px;
     height: 32px;
+    border: 0;
     background: url(dice-faces.jpg) no-repeat;
 }
 
